[gd_scene load_steps=4 format=3 uid="uid://dp6gw4tnm4g13"]

[ext_resource type="Theme" uid="uid://chxi7kg5pq4qp" path="res://Ingame.tres" id="1_adwll"]
[ext_resource type="Script" path="res://Scenes/UI/output_count_ui.gd" id="1_nm31x"]
[ext_resource type="PackedScene" uid="uid://difpcvx2jdcgu" path="res://Scenes/UI/Item Boxes/item_box.tscn" id="2_a3qo0"]

[node name="OutputCountUI" type="HBoxContainer"]
script = ExtResource("1_nm31x")

[node name="CurrentLabel" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("1_adwll")
text = "10"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("1_adwll")
text = "/"
horizontal_alignment = 1

[node name="TargetLabel" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("1_adwll")
text = "10"
horizontal_alignment = 1

[node name="ItemBox" parent="." instance=ExtResource("2_a3qo0")]
layout_mode = 2
